# LightAutoML

./: .gitignore  README.md  Tutorial_5. NLP Interpretation.ipynb  build.py  pyproject.toml
lightautoml/: __init__.py
lightautoml/addons/interpretation/: l2x.py
lightautoml/automl/presets/: image_presets.py  text_presets.py
lightautoml/image/: image.py
lightautoml/ml_algo/: dl_model.py  nn_models.py  utils.py
lightautoml/ml_algo/tuning/: optuna.py
lightautoml/report/: __init__.py
lightautoml/text/: dl_transformers.py  embed_dataset.py  nn_model.py  tokenizer.py  trainer.py
lightautoml/transformers/: numeric.py  text.py
lightautoml/utils/: installation.py
