[tool.poetry]
name = "LightAutoML"
version = "0.2.16"
description = "Fast and customizable framework for automatic ML model creation (AutoML)"
authors = ["Alexander Ryzhkov <AMRyzhkov@sberbank.ru>",
           "Vakhrushev Anton <AGVakhrushev@sberbank.ru>",
           "Simakov Dmitrii <Simakov.D.E@sberbank.ru>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lightautoml.readthedocs.io/en/latest/"
repository = "https://github.com/sberbank-ai-lab/LightAutoML"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]


[tool.poetry.dependencies]
python = ">=3.6.1, <3.9"

poetry-core = "^1.0.0"

numpy = "*"
scipy = "*"
pandas = ">=1"
scikit-learn = ">=0.22"
lightgbm = "^2.3"
catboost = "*"
optuna = "*"
torch = [
    {version = "~1.7",  markers = "python_version <  '3.6.2'"},
    {version = ">= 1.7, <1.9", markers = "python_version >= '3.6.2'"}
]
holidays = "*"
networkx = "*"
cmaes = "*"
log-calls = "*"
pyyaml = "*"
tqdm = "*"
joblib = "*"
importlib-metadata = {version = "^1.0", python = "<3.8"}

autowoe = ">=1.2"

jinja2 = "*"
json2html = "*"
seaborn = "*"

# NLP
gensim = {version = ">=4", optional = true}
nltk = {version = "*", optional = true}
transformers = {version = ">=4", optional = true}

# CV
albumentations = {version = ">=0.4.6", optional = true}
efficientnet-pytorch = {version = "*", optional = true}
opencv-python = {version = "*", optional = true}
pywavelets = {version = "*", optional = true}
scikit-image = {version = "*", optional = true}
torchvision = {version = "*", optional = true}

# Report (pdf)
weasyprint = {version = "^52.5", optional = true}
cffi = {version = "^1.14.5", optional = true}


[tool.poetry.dev-dependencies]
pytest = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
IPython = "*"
nbsphinx = "*"
nbsphinx-link = "*"
sphinx-autodoc-typehints = "*"
pandoc = "*"
notebook = "*"


[tool.poetry.extras]
cv = [
    "albumentations",
    "efficientnet-pytorch",
    "opencv-python",
    "pywavelets",
    "scikit-image",
    "torchvision"
]
nlp = [
    "gensim",
    "nltk",
    "transformers"
]
pdf = ["weasyprint", "cffi"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
